--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,7 @@
 <body>
 <h1>My demo App</h1>
 <a th:href="@{/users/}">List of Users</a>
+<a th:href="@{/lecturers/}">List of Lecturers</a>
+<a th:href="@{/courses/}">List of Courses</a>
 </body>
 </html>
