--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,5 +9,9 @@
 <a th:href="@{/users/}">List of Users</a>
 <a th:href="@{/lecturers/}">List of Lecturers</a>
 <a th:href="@{/courses/}">List of Courses</a>
+<BR><BR>
+<form method="post" th:action="@{/logout}">
+    <input type="submit" value="Logout">
+</form>
 </body>
 </html>
